@@ -8,6 +8,7 @@
 5. If set to only transcode if source is different, or lossless, then only
    change extension if song is actually transcoded.
 6. Use a combo box for 'Transcode if...' options.
+7. Work-around Windows font issues.
 
 2.2.0
 -----
